# uv-mcp

./: PLAN.md  README.md  pyproject.toml
src/uv-mcp/: server.py  uv_wrapper.py
src/uv_mcp/: __init__.py  cli.py  server.py  uv_wrapper.py
